# cove

./: .cursorrules  .gitignore  .infisical.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HUB_DAEMON_REALTIME_COMPLETE.md  HUE_INTEGRATION_COMPLETE.md  HUE_INTEGRATION_FINAL_SUMMARY.md  HUE_PROTOCOL_COMPLETE.md  HUE_TESTING_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_PROGRESS.md  PHASE_4_STEP_2_COMPLETE.md  PROTOCOLS_PACKAGE_COMPLETE.md  README.md  TODO.md  biome.json  docker-compose.yml  esphome.yaml  ha-pro.md  knip.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sd.md  sensor.md  test-2.ts  test-3.ts  test-4.ts  test-5.ts  test-cove.md  test-ha.md  test.ts  turbo.json  unhook.yml
.cursor/plans/: esphome-light-control-e4240a78.plan.md  format-protocols-package-bb11fd2a.plan.md
.cursor/rules/: nextjs.mdc  rust.mdc  ui.mdc
.features/: 03-system-administration.md  04-user-experience.md  05-system-intelligence.md
.github/: renovate.json
.github/workflows/: build-hub.yml  integration-tests.yml
.mosquitto/data/: mosquitto.db
.old/: IMPROVEMENTS.md  app-icons.md  backend-instructions.md  frontend-instructions.md  pnpm-lock.yaml  secrets.yaml  turbo.json
.old/.cursor/rules/: cove.mdc  supabase.mdc
.old/.features/: 02-security-privacy.md  TODO-BY-FEATURES.md  TODO.md
.old/.tmp/LiveActivity/: DeviceActivityAttributes.swift
.old/apps/native/: index.html  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.old/apps/web-app/: next.config.ts  package.json
.old/config/schemas/: cove.schema.json  manufacturer.schema.json
.old/crates/api/: package.json
.old/crates/bus/: package.json
.old/crates/config/: Cargo.toml  package.json
.old/crates/core/: package.json
.old/crates/db/: Cargo.toml  package.json
.old/crates/db/src/: error.rs  lib.rs  model.rs
.old/crates/db/src/models/: log.rs
.old/crates/db/src/query/: delete.rs
.old/crates/discovery/: package.json
.old/crates/esphome/: Cargo.toml
.old/crates/esphome/src/: error.rs  lib.rs  types.rs
.old/crates/esphome/src/protos/: api_options.proto
.old/crates/esphome/tests/: connection_test.rs  utils.rs
.old/crates/integrations/: package.json
.old/crates/logging/: Cargo.toml  package.json
.old/crates/protocols/: package.json
.old/crates/registry/: package.json
.old/crates/timeseries/: README.md
.old/crates/types/: package.json
.old/tooling/next/: base.mjs
.old/tooling/tailwind/: web.ts
.tmp/LiveActivity/: DeviceActivityView.swift
apps/cli/: package.json
apps/expo/: package.json  tailwind.config.ts  tsconfig.json
apps/hub/: EXAMPLE_USAGE.md  MONITORING_SETUP.md  README.md  SCHEMA_TODO.md  package.json  tsconfig.json
apps/hub-v2/: MIGRATION.md  README.md  create-db.ts  debug-start.ts  drizzle.config.ts  package.json  tsconfig.json
apps/hub-v2/data/: hub-v2.db
apps/hub-v2/drizzle/: 0000_busy_terror.sql
apps/hub-v2/src/: daemon.ts  env.ts  index.ts
apps/hub/src/: command-processor.ts  daemon.ts  db.ts  device-lifecycle.ts  env.ts  events.ts  health.ts  hub-initializer.ts  index.ts  lifecycle-coordinator.ts  metrics.ts  state-manager.ts  (+1 more)
apps/ios/: project.yml
apps/native/: index.html  next.config.ts  package.json  tailwind.config.ts  vite.config.ts
apps/web-app/: components.json  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
crates/api/: .cursorrules  Cargo.toml  package.json
crates/api/config/schemas/: cove.schema.json
crates/api/src/: lib.rs  router.rs  server.rs  types.rs
crates/api/src/api/: mod.rs  router.rs
crates/api/src/config/: logging.rs
crates/api/src/device/: registry.rs
crates/api/src/discovery/: error.rs
crates/api/src/events/: mod.rs
crates/api/src/routes/: homekit.rs
crates/api/tests/: server_test.rs
crates/backend/: Cargo.toml  package.json
crates/bus/: Cargo.toml  package.json
crates/config/: Cargo.toml  package.json
crates/core/: Cargo.toml  package.json
crates/core/data/: cove.db
crates/core/src/: main.rs
crates/db/: Cargo.toml  package.json
crates/db/src/: connection.rs  schema.rs
crates/db/src/models/: automation.rs  device.rs  mod.rs  room.rs  user.rs
crates/db/src/query/: insert.rs  mod.rs  select.rs  update.rs
crates/discovery/: Cargo.toml  package.json
crates/discovery/config/devices/philips/: metadata.yaml
crates/discovery/src/: error.rs  lib.rs  service.rs
crates/discovery/src/discovery/: error.rs  mod.rs
crates/discovery/src/protocol/: error.rs  mdns.rs  mod.rs  mqtt.rs1  sse.rs  wifi.rs
crates/errors/: Cargo.toml  package.json
crates/esphome/: README.md  build.rs  package.json
crates/integrations/: Cargo.toml  package.json
crates/integrations/src/: lib.rs
crates/integrations/src/esphome/: apollo_air.rs  mod.rs
crates/logging/: package.json
crates/protocols/: Cargo.toml  package.json
crates/protocols/src/: error.rs  lib.rs
crates/protocols/src/aqara/: mod.rs  types.rs
crates/protocols/src/esphome/: capabilities.rs  mod.rs
crates/protocols/src/homekit/: mod.rs
crates/protocols/src/hue/: config.rs  mod.rs  types.rs
crates/registry/: Cargo.toml  package.json
crates/registry/src/: lib.rs  main.1.rs  registry.rs
crates/timeseries/: Cargo.toml  package.json
crates/timeseries/src/: connection.rs  db.rs  error.rs  lib.rs  model.rs  service.rs  types.rs
crates/timeseries/src/models/: event.rs  log.rs  mod.rs  sensor.rs
crates/types/: Cargo.toml  package.json
crates/types/src/: accessories.rs  capabilities.rs  characteristics.rs  devices.rs  esphome.rs  events.rs  lib.rs  services.rs  system_service.rs  types.rs
crates/types/src/protocols/: homekit.rs  impls.rs  mod.rs  structs.rs  traits.rs
features/: 01-device-control.md
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
tooling/commitlint/: package.json
tooling/github/: package.json
tooling/next/: base.mjs  package.json  tsconfig.json
tooling/npm/: prepare-publish.js
tooling/postcss/: base.cjs  package.json
tooling/tailwind/: base.ts  package.json
tooling/testing/: package.json
turbo/generators/: config.ts
(+296 files in other folders)
