[workspace]
resolver = "2"
members = [
    "./crates/*", "crates/protocols",
    # "./apps/native/src-tauri",
]

[workspace.dependencies]
# Async Runtime and Utilities
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling and Logging
thiserror = "2.0.11"
tracing = "0.1"
miette = { version = "7.2", features = ["fancy"] }
owo-colors = "4.1.0"

# Utilities
chrono = { version = "0.4.39", features = ["serde"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
panic_in_result_fn = { level = "warn", priority = -1 }

[package]
name = "cove"
version = "0.1.0"
edition = "2021"

[dependencies]
protocols = { path = "crates/protocols" }
tokio = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
