[workspace]
resolver = "2"
members = [
    "./crates/*"
]

[workspace.dependencies]
# Async Runtime and Utilities
tokio = { version = "1.44", features = ["full", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
async-trait = { version = "0.1.87" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling and Logging
thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = "0.3.19"
miette = { version = "7.5", features = ["fancy"] }
owo-colors = "4.2.0"

# Utilities
chrono = { version = "0.4.40", features = ["serde"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
panic_in_result_fn = { level = "warn", priority = -1 }

