[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
tracing = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
owo-colors = { workspace = true }

# Workspace
types = { path = "../types" }

# Web Server
axum = "0.8.1"
rspc = { version = "0.4.1" }
rspc-axum = { version = "0.3.0", features = ["ws"] }
specta = { version = "2.0.0-rc.22", features = ["chrono"] }

async-stream = "0.3.6"
validator = "0.20.0"
tower-http = { version = "0.6.2", features = ["cors"] }
local-ip-address = "0.6.3"

async-trait = "0.1.87"

[dev-dependencies]
reqwest = { version = "0.12.13", features = ["json"] }

[lib]
name = "api"
path = "src/lib.rs"
