[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
tracing = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
owo-colors = { workspace = true }

# Workspace
logging = { path = "../logging" }
integrations = { path = "../integrations" }
api = { path = "../api" }
types = { path = "../types" }
