[package]
name = "db"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
cuid2 = "0.1.2"
miette = { workspace = true }
chrono = { workspace = true }
types = { path = "../types" }
tracing = { workspace = true }
tokio = { workspace = true }

[lib]
name = "db"
path = "src/lib.rs"
