[package]
name = "discovery"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
# Async Runtime and Utilities
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"      # YAML serialization for config files
quick-xml = { version = "0.37.2", features = ["serialize"] }  # XML parsing for SSDP/UPnP

# Error Handling and Logging
thiserror = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }

# Utilities
chrono = { version = "0.4.39", features = ["serde"] }  # Date and time utilities
strum = "0.27.1"          # Enum utilities and string conversion
strum_macros = "0.27.1"   # Enum derive macros
once_cell = "1.20.3"      # Lazy static initialization

# Protocol Support
mdns-sd = "0.13.2"        # mDNS/DNS-SD discovery (Apple HomeKit, Google Cast)
ssdp-client = "2.0.0"     # SSDP/UPnP discovery (Philips Hue, Smart TVs)
btleplug = "0.11.7"       # Bluetooth LE scanning (Smart locks, sensors)
zeroconf = "0.15.0"       # ZeroConf/Bonjour services (Network device discovery)
rusb = "0.9.4"            # USB device discovery

# Web Server
axum = "0.8.1"
specta = { version = "2.0.0-rc.22", features = ["chrono"] }

# Internal Dependencies
types = { path = "../types" }
bus = { path = "../bus" }
errors = { path = "../errors" }

[lib]
name = "discovery"
path = "src/lib.rs"
