[package]
name = "integrations"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
tokio = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
types = { path = "../types" }
# protocols = { path = "../protocols" }
[lib]
name = "integrations"
path = "src/lib.rs"
