[package]
name = "integrations"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
tokio = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
types = { path = "../types" }
protocols = { path = "../protocols" }
bus = { path = "../bus" }
esphome = { path = "../esphome" }
timeseries = { path = "../timeseries" }

[lib]
name = "integrations"
path = "src/lib.rs"
