[package]
name = "protocols"
version = "0.1.0"
edition = "2021"
description = "Protocol handlers for Cove home automation system"

[dependencies]
# Internal dependencies
types = { path = "../types" }

# Async Runtime and Utilities
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Time
chrono = { version = "0.4.35", features = ["serde"] }

# Error Handling
thiserror = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
url = "2.5"

# HomeKit
hap = "0.1.0"
ed25519-dalek = "1.0"
base64 = "0.21"
rand = "0.8"

[lib]
name = "protocols"
path = "src/lib.rs"

[lints]
workspace = true
