[package]
name = "protocols"
version = "0.1.0"
edition = "2021"
description = "Protocol handlers for Cove home automation system"

[dependencies]
# Internal dependencies
types = { path = "../types" }
esphome = { path = "../esphome" }
timeseries = { path = "../timeseries" }

# Async Runtime and Utilities
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4.40", features = ["serde"] }


# Utilities
uuid = { version = "1.15", features = ["v4", "serde"] }
url = "2.5"

# HomeKit
# hap = "0.0.10"
# ed25519-dalek = "2.1"
base64 = "0.22"
rand = "0.9"

[lib]
name = "protocols"
path = "src/lib.rs"

[lints]
workspace = true
