[package]
name = "registry"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"

[dependencies]
# Async Runtime and Utilities
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }

# Internal Dependencies
types = { path = "../types" }
bus = { path = "../bus" }
db = { path = "../db" }

[lib]
name = "registry"
path = "src/lib.rs"
