[package]
name = "timeseries"
version = "0.1.0"
edition = "2021"
description = "Cove - A timeseries database client for the home automation platform"

[dependencies]
# Official
questdb-rs = { version = "4.0.3", features = ["chrono_timestamp"] }

# Async runtime and utilities
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true }

# Serialization/deserialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Utilities
cuid2 = "0.1.2"
tracing = { workspace = true }

# Internal dependencies
types = { path = "../types" }

[lib]
name = "timeseries"
path = "src/lib.rs"