[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "Cove - A lightweight, type-safe home automation system"
license = "MIT"
authors = ["Chris Watts"]
repository = "https://github.com/seawatts/cove"

[dependencies]

# Error Handling and Logging
tracing = { workspace = true }
miette = { workspace = true }

tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }  # Logging configuration
tracing-error = "0.2.1"
tracing-appender = "0.2.3"  # File appender for tracing

[lib]
name = "logging"
path = "src/lib.rs"